5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4308/executions/1590_842.log
== SUBMITION (2019-03-26 00:23:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
n = int(input("numero:"))
a1 = string(n,1)

-- EXECUTION TIME:
0.284693
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/842/main.py", line 5, in <module>
    a1 = string(n,1)
NameError: name 'string' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 00:24:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
n = int(input("numero:"))
a1 = string(n,1)
a2 = string(n,2)
a3 = string(n,3)
a4 = string(n,4)
-- EXECUTION TIME:
0.116308
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/842/main.py", line 5, in <module>
    a1 = string(n,1)
NameError: name 'string' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 00:25:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
n = int(input("numero:"))
a1 = string(n,1)
a2 = string(n,2)
a3 = string(n,3)
a4 = string(n,4)
Soma = a1 + a2 + a3 + a4
print(Soma)
-- EXECUTION TIME:
0.132817
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/842/main.py", line 5, in <module>
    a1 = string(n,1)
NameError: name 'string' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:38:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
n = int(input("numero:"))
a1 = int(n // 1000)
a2 = int(n % 1000)
a3 = int(a2 // 10)
a4 = int(a2 % 100)
Soma = a1 + a2 + a3 + a4
print(Soma)
-- EXECUTION TIME:
0.149375
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
272
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:38:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
n = int(input("numero:"))
a1 = int(n // 1000)
a2 = int(n % 1000)
a3 = int(a2 // 100)
a4 = int(a2 % 100)
Soma = a1 + a2 + a3 + a4
print(Soma)
-- EXECUTION TIME:
0.14551
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
256
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
21
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 17:02:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
n = int(input("numero: "))
a1 = int(n // 1000)
a2 = int(n % 1000)
n = int(a2 / 100)
a3 = int(n / 10)
a4 = int(a3 % 10)
Soma = a1 + a2 + a3 + a4
print(Soma)
-- EXECUTION TIME:
0.151097
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
182
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 17:02:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
n = int(input("numero: "))
a1 = int(n // 1000)
a2 = int(n % 1000)
n = int(a2 / 100)
a3 = int(n / 10)
a4 = int(a3 % 10)
Soma = a1 + a2 + a3 + a4
print(Soma)
-- EXECUTION TIME:
0.147725
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
182
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 17:37:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
n = int(input("numero: "))
a1 = int(n // 1000)
n = int(n % 1000)
a2 = int(n // 100)
n = int(n % 100)
a3 = int(n / 10)
n = int(n % 10)
a4 = int(n / 1)
Soma = a1 + a2 + a3 + a4
print(Soma)
-- EXECUTION TIME:
0.183673
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
